readability fix

--- a/index.css
+++ b/index.css
@@ -80,7 +80,7 @@ main {
 }
 
 main p{
-    color: rgb(167, 167, 167);
+    color: rgb(212, 212, 212);
 }
 
 }
